[tool.poetry]
name = "cover-letter-gen"
version = "0.1.0"
description = ""
authors = ["Dhruvsujatha <luberrdhruv@gmail.com>"]
readme = "README.md"
packages = [{include = "cover_letter_gen"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
